# sardine-can

./: .gitignore  data_example.json  platformio.ini
app/: CMakeLists.txt
app/include/: main_window.hpp  pedal_dialog.hpp  pedal_widget.hpp  scan_dialog.hpp  setup_dialog.hpp  types.hpp
app/src/: main.cpp  main_window.cpp  pedal_dialog.cpp  pedal_widget.cpp  scan_dialog.cpp  setup_dialog.cpp
app/src/output/: main
app/ui/: main_window.ui  pedal_dialog.ui  pedal_widget.ui  scan_dialog.ui  setup_dialog.ui
include/: button.hpp  button_interface.hpp  network_manager.hpp  preferences_manager.hpp  preferences_manager_interface.hpp  switch.hpp
src/: button.cpp  main.cpp  network_manager.cpp  preferences_manager.cpp  switch.cpp
static/: index.html
static/css/: inputs.css  main.css  modal.css
static/js/: inputs.js  loading.js  modal.js  pedal.js
